Update עדכון שבועי “אש-אש-צריך-להיזהר”

--- a/content/weekly-update/אש-אש-צריך-להיזהר.md
+++ b/content/weekly-update/אש-אש-צריך-להיזהר.md
@@ -2,8 +2,6 @@
 title: אש, אש, צריך להיזהר
 date: 2023-05-12T11:36:35.080Z
 ---
-
-
 **שבת שלום לכל משפחות הגן,**
 
 לפני שנעבור לעדכון, כמה הודעות:
@@ -15,8 +13,6 @@ date: 2023-05-12T11:36:35.080Z
 שתהיה שבת מנוחה,
 
 **אחינועם, עומרי וכל צוות גן ילדי הטבע הדמוקרטי**
-
-
 
 ## **שכבת הצעירים**
 
@@ -39,6 +35,10 @@ date: 2023-05-12T11:36:35.080Z
 כל הדיבורים על בטיחות – באש ובכלל, הזכירו לילדימות את אחד הנושאים החביבים עליהם – כבאיות, ולוחמות ולוחמי אש! הילדימות חלקו סיפורים על כבאיות שפגשו בדרך לגן, על הצורה והצבע שלהן. מה הצבע של כבאית? אדום! אמרו הילדימות.. שאלנו את עצמנו: לאן הכבאיות נוסעות? לעבודה? לגן של הכבאיות? הן נוסעות לתחנות הכיבוי, או שהן בדרכן לכבות אש במקום אחר! לווינו קצת קסדות מחצר הבוגרימות ודמיינו שגם אנחנו לוחמות ולוחמי אש!
 
 במפגש גם החלטנו לבנות מדורה! קודם כל, כדי שהאש לא תברח החוצה מהמדורה, הקפנו אותה ב"אבנים". בתוך מעגל ה"אבנים", הכנסנו הרבה קוביות בצבעי המדורה – צהוב, כתום, אדום – לעיגול ויצרנו לעצמנו מדורה דמיונית ממש כיפית. דאגנו לא להתקרב מדי כדי לא לקבל כווייה, אבל ישבנו והתחממנו יחדיו.
+
+**טוואי משי**
+
+השבוע רון הביאה לנו הפתעה מיוחדת במינה: קופסה קטנה מלאה בעלים. התבוננו בערימת העלים וראינו קצת תזוזה בפנים. הצצנו קצת יותר מקרוב, ושמנו לב שבין העלים מסתתרים המון זחלים לבנבנים זעירים! הרמנו את אחד העלים וראינו שהוא מלא חורים, ומתוך אחד החורים מציץ זחל אחד רעב במיוחד! מה זחלי המשי אוהבים לאכול? עלים! ענו הילדימות, "כמו בזחל הרעב!". באופן מיוחד, הם אוהבים לאכול עלים מעץ התות! עלי התות גדולים וירוקים, יש להם צורה של לב וקצוות משוננים. מדי יום הזחלים הרעבים שלנו רוצים עוד עלי תות עץ טריים, ונשמח אם גם אתם בדרך לגן תחפשו את עצי התות ותביאו אתכם כמה עלים להאכילם. ממש בקרוב נתחיל גם לראות את תותי העץ מתחילים לצמוח, וזה יהיה גם טעים!
 
 בשבוע הבא נמשיך לעסוק באש החמה,
 
@@ -113,7 +113,5 @@ The [FIRE TRUCK](https://youtu.be/EyDpcfhPbSw)!
 The FIREFIGHTERs bring their HELMET, HOSE, and LADDER
 
 And PUT THE FIRE OUT! 
-
- 
 
 **צוות שכבת הבוגרים - אורטל, אורית, גבי, חוה, רוני, מייקי ונופר**
