Update עדכון שבועי “מהשדה-ועד-לשולחננו”

--- a/content/weekly-update/מהשדה-ועד-לשולחננו.md
+++ b/content/weekly-update/מהשדה-ועד-לשולחננו.md
@@ -2,17 +2,15 @@
 title: מהשדה ועד לשולחננו
 date: 2023-05-26T16:02:17.110Z
 ---
-
-
 **שבת שלום לכל משפחות הגן!**
-
- 
 
 כמה תזכורות ועדכונים:
 
 1. השבוע יתקיים טיול המשפחות שלנו וכולנו מתרגשים! מי שטרם התנדבו לתפקיד כלשהו מוזמנים להיכנס לרשימה שנשלחה בוואטסאפ – יש צורך בעוד כמה מתנדבים, בעיקר לארוחת הערב!
 
-2. מעדכנים שלשכבת הבוגרים הצטרפה השבוע גיא, משלבת של אחד הילדים בשכבה, ואנחנו זכינו בעוד דמות חינוכית הדוברת את שפת וערכי הגן.
+2. מעדכנים שהשבוע יצטרף אלינו לשכבת הצעירים ילד חדש בשם גילי. אם תראו אותו ואת הוריו מוזמנים לברך אותם לשלום!
+
+3. לשכבת הבוגרים הצטרפה השבוע גיא, משלבת של אחד הילדים בשכבה, ואנחנו זכינו בעוד דמות חינוכית הדוברת את שפת וערכי הגן. ברוכה הבאה גיא!
 
 **שבת מנוחה!**
 
@@ -53,8 +51,6 @@ date: 2023-05-26T16:02:17.110Z
 בשבוע הבא נמשיך ליהנות מהקיץ עם שלל פעילויות מים ונמשיך ללמוד על הגוף שלנו. בינתיים נחכה לכולן ביום ראשון בגן – לא לשכוח סדינים נקיים ובקבוקי מים מלאים!
 
 **כל צוות שכבת הצעירים: יגאל, הדר, נופר, רוני, מיכל, עדי, אליסה, תניה ואלמוג**
-
-
 
 ## **שכבת הבוגרים**
 
