Update עדכון שבועי “מהשדה-ועד-לשולחננו”

--- a/content/weekly-update/מהשדה-ועד-לשולחננו.md
+++ b/content/weekly-update/מהשדה-ועד-לשולחננו.md
@@ -50,7 +50,7 @@ date: 2023-05-26T16:02:17.110Z
 
 בשבוע הבא נמשיך ליהנות מהקיץ עם שלל פעילויות מים ונמשיך ללמוד על הגוף שלנו. בינתיים נחכה לכולן ביום ראשון בגן – לא לשכוח סדינים נקיים ובקבוקי מים מלאים!
 
-**כל צוות שכבת הצעירים: יגאל, הדר, נופר, רוני, מיכל, עדי, אליסה, תניה ואלמוג**
+**כל צוות שכבת הצעירים: יגאל, הדר, נופר, רוני, מיכל, עדי, אליסה, תניה, קרן אור ואלמוג**
 
 ## **שכבת הבוגרים**
 
