--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -1,7 +1,7 @@
 ---
-title: לימור
-firstname: "לימור "
-lastname: " ברגמן"
+title: אליסה
+firstname: אליסה
+lastname: אנצ׳יפולובסקי
 img: /assets/pics/uploads/לימור-.jpg
 index: 9
 ---
