Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -5,13 +5,21 @@ lastname: אנצ׳יפולובסקי
 img: /assets/pics/uploads/לימור-.jpg
 index: 9
 ---
-**לימור ברגמן בת 31 גבעתיים- מחנכת** 
+**אליסה אנצ׳יפולובסקי בת 27 תל אביב**
 
-**בוגרת תואר ראשון בחינוך לגיל הרך, מכללת קיי.**\
-**שנה שמינית בתחום החינוך.**
+**לומדת חינוך לגיל הרך בסמינר הקיבוצים. כשלוש שנים בתחום החינוך לגיל הרך.**
 
-**\---------------------------------------------------------------------------------**
+**בעלת תעודת צורפות ועיצוב בתלת מימד**.
 
+**\-------------------------------------------------------------------------------------------**
+
+מאז שאני זוכרת את עצמי תמיד אהבתי ילדים והגיע השלב שבו החלטתי להתמקצע בתחום.
+
+כמחנכת תמיד ריתק אותי איך ילדים רואים את העולם ומרגישים את הסביבה, איך במהלך השנה יוצרים מערכת יחסיםאינטיבידואלית וקבוצתית.
+
+עם הילדים/ות אני זוכה ללמד וללמוד.
+
+\
 הגעתי לתחום של הילדים והחינוך מתוך רצון פנימי חזק לעצב את הדור הבא בדרך שהיא חווייתית ותואמת לתחומי העניין של הילדים, וכמובן גם מתוך הצורך שלי להעניק אהבה לילדימות ולהראות שיש דרכי חינוך נוספות.\
 התקשורת בין הילד למבוגר בעיניי צריכה להיות בגובה עיניים כדי לייצר אמון הדדי וביטחון, וכך הילד יגיע להחלטות מתוך שקיפות והבנה.
 
