Update עדכון שבועי “תפקידים-חדשים-חברים-חדשים”

--- a/content/weekly-update/תפקידים-חדשים-חברים-חדשים.md
+++ b/content/weekly-update/תפקידים-חדשים-חברים-חדשים.md
@@ -2,11 +2,7 @@
 title: תפקידים חדשים, חברים חדשים
 date: 2023-06-03T09:16:01.668Z
 ---
-
-
 **שבת שלום לכל משפחות הגן!**
-
- 
 
 איזה כיף היה לטייל ביחד – תודה לכל המארגנות ולכל המתנדבים שלנו, ובמיוחד לראובן וצופית על האוכל הטעים! מקווים שכולם נהנו למרות החום :) מוזמנים לארגן לעצמכם טיולים נוספים עם החברימות!
 
@@ -16,7 +12,7 @@ date: 2023-06-03T09:16:01.668Z
 
 **אחינועם, עומרי וכל צוות גן ילדי הטבע הדמוקרטי**
 
-**שכבת הצעירים**
+## **שכבת הצעירים**
 
 השבוע היה חמים וקיצי, ואנחנו נהנינו להמשיך להעמיק בפן המים של "חג המים". לשולחן המים התווספו הרבה כלים קטנטנים, ואנחנו תרגלנו העברת מים בין הפיילות בעזרת הכלים הקטנים, והעברה מכלי לכלי. מה קורה כששופכים מבקבוק לכוס? אנחנו שומעים צליל "בק בק בק", והמים בקלות עוברים מהבקבוק לכוס. ומה קורה כששופכים מכוס לבקבוק? אם הופכים את הכוס במהירות, המים נשפכים לכל עבר, ומעט אולי נכנסים גם לבקבוק. אם הופכים לאט ובזהירות, אנחנו מצליחים להכניס הרבה יותר מים לבקבוק! פעילות זו היא תחילת עבודה על פעולת המזיגה, ומאפשרת לנו לעבוד על תנועה זהירה. כשחם לנו, אנחנו לפעמים אוהבים להשפריץ על עצמנו מים – זו ההזדמנות לא להיות זהירים. רק לשים לב מי מסביבנו ולוודא שלכולם נעים שמשפריצים עליהם!
 
