Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -1,8 +1,8 @@
 ---
-title: אליסה
-firstname: אליסה
-lastname: אנצ׳יפולובסקי
-img: /assets/pics/uploads/לימור-.jpg
+title: תניה
+firstname: תניה
+lastname: כהן
+img: /assets/pics/uploads/תניה-1.jpeg
 index: 12
 ---
 **אליסה אנצ׳יפולובסקי בת 27 תל אביב**
