Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -5,11 +5,9 @@ lastname: כהן
 img: /assets/pics/uploads/תניה-1.jpeg
 index: 12
 ---
-**אליסה אנצ׳יפולובסקי בת 27 תל אביב**
+**תניה כהן, בת 26 תל אביב**
 
-**לומדת חינוך לגיל הרך בסמינר הקיבוצים. כשלוש שנים בתחום החינוך לגיל הרך.**
-
-**בעלת תעודת צורפות ועיצוב בתלת מימד**.
+**סטודנטית לחינוך לגיל הרך במסלול היצירתי**
 
 **\-------------------------------------------------------------------------------------------**
 
