Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -9,12 +9,6 @@ index: 12
 
 **סטודנטית לחינוך לגיל הרך במסלול היצירתי**
 
-**\-------------------------------------------------------------------------------------------**
+**\-----------------------------------------------------------------------------------------**
 
-מאז שאני זוכרת את עצמי תמיד אהבתי ילדים והגיע השלב שבו החלטתי להתמקצע בתחום.
-
-כמחנכת תמיד ריתק אותי איך ילדים רואים את העולם ומרגישים את הסביבה, איך במהלך השנה יוצרים מערכת יחסיםאינטיבידואלית וקבוצתית.
-
-עם הילדים/ות אני זוכה ללמד וללמוד.
-
-שמחתי להכיר את גן ילדי הטבע שתואם את גישת החינוך שלי ומאפשר לי ביטוי עצמי, להרגיש חלק ממשפחה, לעטוף את הילדימות בחום ואהבה ולתווך להם את הדרך לעצמאות מחשבתית ומעשית.
+תמיד אהבתי להיות בקרבת ילדים. אני חושבת שלהם ולי יש שפה משותפת. הם הרבה יותר מעניינים ממבוגרים. מלאים פליאה. מאז שאני זוכרת את עצמי אני עובדת עם ילדים: אם זה לבלות אחרי הגן יחד, עזרה עם הלימודים, הדרכה במחנות קיץ, טיפול בתינוקות, עבודה בגנים ועוד.יש בי תשוקה, יותר נכון, כמיהה להתעסק ולהתפתח בתחום הזה. אני חושבת שיש לי משימה והיא לתרום לעיצוב הדור הבא, על ידי רכות, הקשבה, אמונה, כבוד, נתינת עצמאות והרבה הרבה אהבה.
