Update הצוות “מאי”

--- a/content/team/מאי.md
+++ b/content/team/מאי.md
@@ -2,7 +2,7 @@
 title: מאי
 firstname: מאי
 lastname: ארגמן
-img: עע
+img: /assets/pics/uploads/תמונה-מאי-1.jpeg
 index: 16
 ---
 **מאי ארגמן בת 43.   מחנכת** 
