Update הצוות “אלמוג”

--- a/content/team/אלמוג.md
+++ b/content/team/אלמוג.md
@@ -5,4 +5,12 @@ lastname: משאש
 img: /assets/pics/uploads/אלמוג-תמונה-1.jpeg
 index: 17
 ---
-אלמוג משאש, בת 27 מתל אביב, מחנכת
+**אלמוג משאש, בת 27 מתל אביב, מחנכת**
+
+**ש﻿נה שניה** 
+
+**.﻿.............................................................................................................................**
+
+מפגש עם ילדים, עם חינוך ועם העברת ידע קיבל ביטוי לאורך חיי במספר נקודות משמעותיות.
+
+אני רואה חינוך מבוסס הקשבה בתור ערך עליון וילדים כמי הראויים לקבל אותו מעצם היותם. היותם נשמות צעירות בעולם, הצריכות חניכה. הם העתיד שלנו, ומי שבא להכיל ואף לתקן את הסביבה שלנו.על כן, אני מאמינה שיש להקנות לילדים ערכים של אהבה עצמית ואהבת האחר, נתינת מרחב להתבטאות על כל רובדי העצמיות הקיימים בהם, על מנת לאפשר לילד חוויית חיים נינוחה, כיישות שנולד להיות. אני מאמינה שבאמצעות חשיפה לטבע, לאומנות ולתנועה ניתן לתרגל עם הילדים ביטוי עצמי איכותי, בריא ומחבק.והדרך הפשוטה והכנה לפעול זה מלב קשוב ואהבה כנה.
