--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -5,7 +5,7 @@ lastname: בארי
 img: /assets/pics/uploads/תמונת-פרופיל-עומרי.jpeg
 index: 1
 ---
-**עומרי בארי, בת 34 - מנהל הגן** 
+**עומרי בארי, בן 35 - מנהל הגן** 
 
  ***גר בתל אביב, חי בזוגיות עם עידן ואבא לניתאי ותמר.***
 
