Update הצוות “נטע”

--- a/content/team/נטע.md
+++ b/content/team/נטע.md
@@ -9,7 +9,7 @@ index: 1
 
  ***גר בתל אביב, חי בזוגיות עם עידן ואבא לניתאי ותמר.***
 
-**בעל *תואר ראשון בפסיכולוגיה ותואר שני במינהל ציבורי. בימים אלה מסיים את הכשרה כמנחה הורים במכון אדלר***
+**בעל *תואר ראשון בפסיכולוגיה ותואר שני במינהל ציבורי. מנחה הורים בשיטת אדלר***
 
 **\---------------------------------------------------------------------------------**
 
