Update עדכון שבועי “מייצרים-משחקים-מחומרים-משומשים-ומהדמיון”

--- a/content/weekly-update/מייצרים-משחקים-מחומרים-משומשים-ומהדמיון.md
+++ b/content/weekly-update/מייצרים-משחקים-מחומרים-משומשים-ומהדמיון.md
@@ -17,15 +17,13 @@ date: 2023-07-06T17:38:24.981Z
 * מי שקיבל בגדי גן - לכבס ולהחזיר לרכזות שכבה. 
 * נשמח אם תביאו לגן כמה פרטים מיותרים אם יש לכם (עדיפות למכנסיים קצרים/ מכנסיים דקיקים, תחתונים, חולצות קצרות במידות של שנה וחצי עד 3. בבקשה אל תביאו לנו שקים עמוסים, אלא פרטים בודדים. תודה ! 
 
-3.    קייטנה- כל מי שנרשמו לקייטנה, בשבוע הבא נפתח קבוצת ואטסאפ ונעדכן בכל הפרטים.
+  3.    קייטנה- כל מי שנרשמו לקייטנה, בשבוע הבא נפתח קבוצת ואטסאפ ונעדכן בכל הפרטים.
 
 **4.**    מסיבות הסיום: השבוע תתקיים מסיבת הסיום של שכבת הצעירים, **ביום חמישי ה-13.7. שימו לב שיש לאסוף את כלל ילדי הגן עד השעה 16:00 ביום זה. שבועיים לאחר מכן, ב27.7,** תתקיים מסיבת הסיום של שכבת הבוגרים – גם ביום זה ייסגר הגן בשעה 16:00. אנא התארגנו בהתאים.
 
  **שבת מנוחה,**
 
 **אחינועם, עומרי וכל צוות גן ילדי הטבע הדמוקרטי**
-
-
 
 ## **שכבת הצעירים**
 
@@ -40,8 +38,6 @@ date: 2023-07-06T17:38:24.981Z
 מחכות לכם בגן ביום ראשון, לא לשכוח בקבוקים מלאים וסדינים נקיים!
 
 **צוות שכבת הצעירים: עדי, יגאל, נופר, מיכל, אלמוג, מאי, נועה, הדר, תניה ורוני**
-
-
 
 ## **שכבת הבוגרים**
 
@@ -63,17 +59,13 @@ date: 2023-07-06T17:38:24.981Z
 
 השבוע הגיעו למרכז השולחן שלנו שתי קערות. החברימות ישר זיהו את החול האהוב מהארגז, אבל מהי האבקה בקערה השנייה? אולי נריח? הציע חבר אחד. אולי נטעם? הציעה חברה אחרת. בסבב הטעימות שלנו גילינו שמדובר במלח! ממש כמו בבצק שלנו. 
 
-הכנסו את המלח לשקית אחת ואת החול לשנייה. 
-
-תהינו, מה יצבע יותר בקלות, המלח הבהיר או החול הכהה? כל אחד בתורו שיקשק את השקית וגלינו שהמלח הבהיר נצבע הרבה ביותר בקלות. 
+הכנסו את המלח לשקית אחת ואת החול לשנייה. בכל אחת טפטפנו קצת ג'ל צבע מאכל, ותהינו: מה יצבע יותר בקלות, המלח הבהיר או החול הכהה? כל אחד בתורו שיקשק את השקית וגלינו שהמלח הבהיר נצבע ומתערבב הרבה ביותר בקלות. 
 
 לאחר מכן עברנו לשולחן, כל חבר קיבל דף, דבק וכלי עם החול והמלח. מרחנו דבק ופיזרנו מעט מהחול והמלח, לבסוף ניערנו את השאריות והתבוננו ביצירות הצבעוניות שיצאנו לנו :)) 
 
-  
-
 **English Time**
 
-The friends know some direction words like OVER UNDER ON from our foavorite book “We’re Going on a Bear Hunt.”
+The friends know some direction words like OVER UNDER ON from our favorite book “We’re Going on a Bear Hunt.”
 
 We learned some more this week with a game with chairs!
 
