--- a/content/team/הדר.md
+++ b/content/team/הדר.md
@@ -1,20 +1,18 @@
 ---
-title: הדר
-firstname: הדר
-lastname: ארץ
+title: עמנואל
+firstname: עמנואל
+lastname: ברקאי קרן
 img: /assets/pics/uploads/תמונה-של-הדר-.jpeg
 index: 6
 ---
-הדר ארץ בת 27 גרה בתל-אביב
+עמנואל בת 21 , גרה ברמת גן 
 
 ........................................................................................................................................................
 
- גן ילדי הטבע עבורי הוא מקום בו הגינון נעשה בתשומת לב והשקעה. בילדיםות, וגם במחנכות- הליווי שאני מקבלת, הידע המקצועי, הפירגון והאוזן הקשבת, הם אוצרות של ממש ולא מובנים מאליהם.\
-מחשבה רבה מושקעת בכל פן שקשור להתנהלות של הגן והצוות. וזה עובד!
+ מאז שאני זוכרת את עצמי הייתה לי אהבה לא מוסברת לעבודה עם ילדים . המפגש הראשון שלי עם עולם חינוך היה בגיל 15 בצופים , שם התחלתי להדריך והתאהבתי . משם התגלגלתי לנהל צוותים בצופים ולאורך כל הדרך דאגתי להשאיר הילדים בסביבה הקרובה שלי ולהתנדב דרך הצופים במועדוניות של ילדים עם צרכים מיוחדים.  
 
-לאחר שעבדתי מספר שנים בטיפול בילדים באופן פרטי, בחרתי לחזור לעבוד בגן כי התגעגעתי לעבודה עם צוות. ההווי, העבודה שכם אל שכם, הלמידה ההדדית, כל אלה הם ערך מוסף שעושה מבחינתי את ההבדל.\
 \
-יש בי המון אהבה לתת ואני מכבדת את הילדים מאוד. אני נהנה לגנן את הילדים ולגדול בעצמי איתם.\
-הקטנטנים חיים ולומדים דברים שאנחנו כבר שכחנו. לעבוד איתם זאת זכות אדירה - הם מחזירים אותי פנימה, לשורשים.\
+מאז ומתמיד אהבתי מאוד ספורט וילדים , וכשהשתחררתי מהצבא שילבתי את שתי האהבות שלי והעברתי חוגי ספורט בגנים לגיל הרך, נהניתי מאוד לראות את הילדים לומדים תוך כדי תנועה על עצמם ועל הקשר שלהם עם חבריהם לגן. 
+
 \
-העבודה בגן דורשת איזון וגמישות. מחד, לאפשר לעצמי להיות ילד, לצחוק, לשחק, להשתטות... ומאידך, לתפקד בתור המבוגרת האחראית.
+אני מאוד מתרגשת להתחיל את הדרך שלי בגן ילדי הטבע הדמוקרטי , ללמוד שיטות חינוך חדשות ולהביא את עצמי לתוך הקהילה של הגן.
