Update הצוות “הדר”

--- a/content/team/הדר.md
+++ b/content/team/הדר.md
@@ -2,7 +2,7 @@
 title: עמנואל
 firstname: עמנואל
 lastname: ברקאי קרן
-img: /assets/pics/uploads/תמונה-של-הדר-.jpeg
+img: /assets/pics/uploads/תמונה-עמנואל.jpeg
 index: 6
 ---
 עמנואל בת 21 , גרה ברמת גן 
