Update הצוות “חן”

--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -1,8 +1,8 @@
 ---
-title: יגאל
-firstname: יגאל
-lastname: שוורצמן
-img: /assets/pics/uploads/תמונה-יגאל.jpg
+title: שירז
+firstname: "שירז "
+lastname: ליכטר
+img: /assets/pics/uploads/שירז-תמונה.jpg
 index: 8
 ---
 **יגאל שוורצמן, בן 33 -מחנך. מתל אביב- מחנך**
