Update הצוות “חן”

--- a/content/team/חן.md
+++ b/content/team/חן.md
@@ -5,14 +5,10 @@ lastname: ליכטר
 img: /assets/pics/uploads/שירז-תמונה.jpg
 index: 8
 ---
-**יגאל שוורצמן, בן 33 -מחנך. מתל אביב- מחנך**
+שירז אלון בת 32, כשש שנים עוסקת בחינוך לגיל הרך. בעלת תואר ראשון בחינוך במכללת סמינר הקיבוצים ותעודת הוראה. אמא לשניים
 
-**בעל תעודת הוראה בחינוך לגיל הרך ותואר ראשון במדעי הרוח.**
+**\-------------------------------------------------------------------------------------------**
 
-**\---------------------------------------------------------------------------------**
+השנה חזרתי לגן אחרי חופשת לידה ארוכה ואני מגיעה מתרגשת ושמחה מתמיד לחזור. גן ילדי הטבע הוא בית שתמיד נעים להגיע ולחזור אליו.
 
-עסקתי בחינוך עוד בשנת השרות ובגרעין נח"ל. אחרי התואר חזרתי לעולם החינוך עם ידע אקדמי ובמקביל התחלתי לעבוד בגנים של ילדי פליטים וילדי חינוך מיוחד בדרום תל אביב.
-
-התאהבתי בעולם הגננות, עשיתי תעודת הוראה וזוהי השנה השישית שלי כגנן מוסמך.
-
-אני אוהב מאוד לעבוד עם ילדים  קודם כל כי זאת העבודה הכי כייפית בעולם, הילדימות תמיד מפתיעים ומדהימים אותי כל פעם מחדש וגם אני אני שמח לעבוד במקצוע שיש בו המון אחראיות, שאילת שאלות והסקת מסקנות. להיות גנן זה תמיד לחשוב, תמיד לערער על מה שמובן מאליו ותמיד להיות שם בשביל הילדימות וגם בשביל הצוות. אני שמח להתחיל שנה חדשה בגן ילדי הטבע הדמוקרטי.
+חינוך הוא חלק מחיי עוד מאז היותי נערה צעירה ופעילה בתנועות נוער ובחינוך בלתי פורמלי, מאז ותמיד ידעתי שחינוך יהיה חלק בלתי נפרד מחיי. הגיל הרך מבחינתי הוא לב ליבו של החינוך בעידן שלנו, כאן הכל מתחיל. ואני שמחה ונרגשת לקחת חלק מהחינוך של הילדימות שהופכים להיות המבוגרים שבעתיד יובילו את העולם שלנו למקום טוב יותר. אני רואה בחינוך שליחות, הזדמנות אמיתית להכיר ילדימות, לצלול לתוך העולם שלהם ויחד לגלות ולהכיר דברים חדשים ומעניינים. הדבר הכי מיוחד וכיף בגן שלנו, שהילדימות הם שמתווים לנו את הדרך, בזכות פרוייקטים, תחומי עניין אהובים והבנה עמוקה של האנשים שהם.
