Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -1,14 +1,12 @@
 ---
-title: תניה
-firstname: תניה
-lastname: כהן
+title: לין
+firstname: לין
+lastname: קאנטי
 img: /assets/pics/uploads/תניה-1.jpeg
 index: 12
 ---
-**תניה כהן, בת 26 תל אביב**
+**לין קנטי**
 
-**סטודנטית לחינוך לגיל הרך במסלול היצירתי**
+**סטודנטית שנה אחרונה במסלול משחק וקולנוע, לאמנויות הקול והמסך, מכללת ספיר בעוטף עזה.**
 
 **\-----------------------------------------------------------------------------------------**
-
-תמיד אהבתי להיות בקרבת ילדים. אני חושבת שלהם ולי יש שפה משותפת. הם הרבה יותר מעניינים ממבוגרים. מלאים פליאה. מאז שאני זוכרת את עצמי אני עובדת עם ילדים: אם זה לבלות אחרי הגן יחד, עזרה עם הלימודים, הדרכה במחנות קיץ, טיפול בתינוקות, עבודה בגנים ועוד.יש בי תשוקה, יותר נכון, כמיהה להתעסק ולהתפתח בתחום הזה. אני חושבת שיש לי משימה והיא לתרום לעיצוב הדור הבא, על ידי רכות, הקשבה, אמונה, כבוד, נתינת עצמאות והרבה הרבה אהבה.
