Update הצוות “רותם”

--- a/content/team/רותם.md
+++ b/content/team/רותם.md
@@ -10,3 +10,11 @@ index: 12
 **סטודנטית שנה אחרונה במסלול משחק וקולנוע, לאמנויות הקול והמסך, מכללת ספיר בעוטף עזה.**
 
 **\-----------------------------------------------------------------------------------------**
+
+אני נמצאת בתחום החינוך בתור חניכה ובהמשך מדריכה כבר 11 שנים.
+
+הגעתי לחינוך, בתור חניכה בכיתה ט' בנוע"ל ומשם נשאבתי. מתוך רצון פנימי חזק לעצב את הדור הבא בדרך שהיא חווייתית ותואמת לתחומי העניין של הילדים, וכמובן גם מתוך הצורך שלי להעניק אהבה לילדימות ולהראות שיש דרכי חינוך נוספות.
+
+אני אוהבת לראות ילדים, לראות כמה הם גמישים, גדלים. זה הדבר הכי חמוד בעולם. הם מזכירים לי את המבט הצלול, הנכון, המחשבה הראשונה.
+
+שמחתי להכיר גן שתואם את גישת החינוך שלי ומאפשר לי ביטוי עצמי, להרגיש חלק ממשפחה, לעטוף את הילדימות בחום ואהבה ולתווך להם את הדרך לעצמאות מחשבתית ומעשית.
