Update עדכון שבועי “ברוכה-הבאה-תשפ-ד”

--- a/content/weekly-update/ברוכה-הבאה-תשפ-ד.md
+++ b/content/weekly-update/ברוכה-הבאה-תשפ-ד.md
@@ -26,6 +26,8 @@ date: 2023-09-08T09:29:41.200Z
 
 נשמח אם תקפידו לקרוא את העדכון מדי שבוע בשל ההודעות השוטפות המועברות אך ורק דרכו, וכמובן גם כדי לדעת מה קורה בגן, על מה אנחנו לומדים ומדברים, כיצד אנחנו מקיימים דיאלוג עם הילדימות בנושאים השונים, איך אנחנו מפתחים חשיבה מסועפת – במלים אחרות, איך נראית הפדגוגיה שלנו. קריאת העדכון בצורה שוטפת מאפשרת לכם להמשיך את השיח של הגן גם בבית, וללמוד על החוויות, הפעילויות והרגעים המרגשים שעברו על הילדימות ביום-יום שלהם בגן. קוראים אדוקים אף יבחינו בשלבי התפתחות וצמיחה, ויראו כיצד משבוע לשבוע אנחנו מפתחים ומשדרגים את הפעילויות והשיח.
 
+## השתלבות בשנה החדשה
+
 רגע לפני שנפרט על השבוע וקצת הראשונים שלנו, רצינו לנצל הזדמנות זו כדי להגיד לכולכם - משפחות ממשיכות ומשפחות מצטרפות - המון תודה על האמון שנתתם בנו! זה בלט מאוד בימים הראשונים, וגם הזכיר לנו כמה כשהתקשורת בין הגן לבית טובה, לילדימות הרבה יותר קל לעבור תהליכים כמו השתלבות או הסתגלות לשכבה חדשה. זה בלט בימים הראשונים ונתן לנו התחלה מדהימה!
 
 את הימים הראשונים אנחנו משקיעים ביצירת אמון ובסיס חזק, כמובן למצטרפים שנמצאים בתהליך הסתגלות, אבל גם לבוגרים שלנו שהמשיכו לשנה נוספת והחליפו חלל ובאופן חלקי גם צוות וחברימות. כלל המשפחות והילדימות נדרשים להסתגל למציאות חדשה, הכיתות מחולקות אחרת, הילדימות בחללים אחרים, ולכן הפוקוס שלנו הוא ביסוס האמון ויצירת אוירה נעימה ונינוחה.
