Update עדכון שבועי “ברוכה-הבאה-תשפ-ד”

--- a/content/weekly-update/ברוכה-הבאה-תשפ-ד.md
+++ b/content/weekly-update/ברוכה-הבאה-תשפ-ד.md
@@ -10,7 +10,7 @@ date: 2023-09-08T09:29:41.200Z
 2. **גיבוש שכבתי + הרמת כוסית לראש השנה**: כבכל שנה נקיים מפגשי גיבוש לכל שכבה – הזדמנות להכיר זו את זה ואת הילדימות. המפגשים יהיו בארגונכם, ההורים – יישלח אליכם מייל נפרד בנושא.
 3. **שמות:** נבקש שתעזרו לנו ותרשמו שמות על כל ציוד הילדימות – תיקים, נעליים, סדינים, מוצצים, חיתולים, חפצי מעבר וגם בגדים. בכל שכבה יש יותר מ-30 ילדימות ובלי שמות אנחנו מתקשות לחבר חפץ לילד.ה.
 4. **אינטרקום**: כשאתם מצלצלים באינטרקום אנחנו שומעים וגם רואים. לעיתים לוקח לנו כמה דקות להגיע. אנא התאזרו בסבלנות, ואל תצלצלו שוב ושוב. בנוסף, שימו לב שבין השעות 12 ל-15 ילדימות ישנים בגן - אם הגעתם לאסוף את ילד.תכם בשעות אלו, כיתבו או התקשרו לקפטנית שלכם, ואנחנו נוציא את הילדימות החוצה. 
-5. **עגלות**: לצערנו אין מקום לאחסן עגלות בתוך הגן במהלך היום. רבים מכם בוחרים להשאירן בכניסה לגן בתקופת ההסתגלות - רק שימו לב לקפלן ולסדרן בצמוד לקיר בכדי לא לחסום את הכניסה לגן ולאפשר לאחרים מקום. אין להשאיר עגלות בטרמינל - זה מפריע לכניסת ויציאת הילדימות.
+5. **עגלות**: לצערנו אין מקום לאחסן עגלות בתוך הגן במהלך היום. בתקופת ההסתגלות בלבד ניתן להשאירן בכניסה לגן  - רק שימו לב לקפלן ולסדרן בצמוד לקיר בכדי לא לחסום את הכניסה לגן ולאפשר לאחרים מקום. אין להשאיר עגלות בטרמינל - זה מפריע לכניסת ויציאת הילדימות.
 
 ## עדכון שבועי
 
