Update הצוות “נעמי”

--- a/content/team/נעמי.md
+++ b/content/team/נעמי.md
@@ -5,4 +5,6 @@ lastname: לנדר
 img: /assets/pics/uploads/נועמי-1-תמונה-.jpeg
 index: 19
 ---
-.
+עמי לנדר, בת 31 - מחנכת
+
+7 שנים בתחום החינוך לגיל הרך
