Update הצוות “נעמי”

--- a/content/team/נעמי.md
+++ b/content/team/נעמי.md
@@ -5,6 +5,8 @@ lastname: לנדר
 img: /assets/pics/uploads/נועמי-1-תמונה-.jpeg
 index: 19
 ---
-עמי לנדר, בת 31 - מחנכת
+עמי לנדר, בת 31 גרה בגבעתיים.
 
-7 שנים בתחום החינוך לגיל הרך
+7 שנים בתחום החינוך לגיל הרך- אשר התחלתי את דרכי בתחום החינ​וך לגיל הרך הרגשתי שמצאתי את מ​קומי בעולם. יש בלבי הרבה אהבה ​שאני רוצה להתחלק איתה עם ילדים​. 
+
+אין דבר יותר מרגש בשבילי מלראו​ת צעדים ראשונים של ילדים, לשמו​ע מילים ראשונות. אני מרגישה אח​ריות להיות חלק מחייהם ומאמינה ​שבידיינו לגדל אותם מאושרים.
