Update הצוות “נגה”

--- a/content/team/נגה.md
+++ b/content/team/נגה.md
@@ -2,7 +2,7 @@
 title: נגה
 firstname: נגה
 lastname: בורודטי
-img: /assets/pics/uploads/תמונה-נגה.jpeg
+img: /assets/pics/uploads/תמונה-נוגה-1.jpeg
 index: 18
 ---
 נגה בורודטי , בת 27, גרה בתל אביב
