Update עדכון שבועי “הקבוצה-שלי-והכיתה-שלי”

--- a/content/weekly-update/הקבוצה-שלי-והכיתה-שלי.md
+++ b/content/weekly-update/הקבוצה-שלי-והכיתה-שלי.md
@@ -18,8 +18,6 @@ date: 2023-09-22T12:32:46.146Z
 
 **עומרי, אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**
 
- 
-
 ## שכבת הצעירים
 
 חזרנו מחופשת ראש השנה הישר לשבוע השלישי להסתגלות, כמה כייף!
@@ -58,8 +56,6 @@ date: 2023-09-22T12:32:46.146Z
 
 **צוות שכבת הצעירים: הילה, גבי, רוני, אלמוג, מיאל, נעמי, ענבר ושירז.**
 
- 
-
 ## שכבת הבוגרים
 
 אחרי שהילדימות כבר התרגלו לחללים ולסדר היום של השכבה הבוגרת, יודעים איפה כל דבר נמצא - איפה ארגז הבקבוקים, איפה ספסל הנעליים של כיתה ובכלל באיזו כיתה אני - התחלנו לעבוד על ערכים חשובים בגן שלנו: הקבוצתיות והחברות - נושאים שבול מתאימים לתקופה של יום כיפור וסוכות!
@@ -68,7 +64,7 @@ date: 2023-09-22T12:32:46.146Z
 
 חלק מאוד משמעותי בשכבת הבוגרימות הוא החברויות בין הילדימות. חשבנו קצת יחד מה זה אומר, שמישהי חברה שלי: הילדימות אמרו שחברימות עוזרים כשלמישהו מהם קשה, שחברימות אוהבים לשחק יחדיו, חבר מביא לי את הבקבוק, חברה שומרת לי משחק, ועוד… אנחנו מצידנו מנסות לתווך להם כשאנחנו רואות מישהו עושה משהו מאוד חברי, כמו למשל: לוותר על משחק שילדה אחרת ממש רוצה, או לגשת לילד שבוכה לשאול מה קרה.
 
-בהדרגה אנחנו בונות את הקבוצות שלנו: הקבוצה הכחולה מורכבת מוורודים לשעבר וצהובים לשעבר,  ואילו הצהובה מורכבת מסגולים לשעבר וילדימות חדשים. בשבועיים האחרונים התמקדנו בהכרת החללים והבנה - אני בכיתה הצהובה או הכחולה? עכשיו אנחנו גם מוסיפות את האווירה הקבוצתית. למשל, נשב יחדיו לחברותא: נשתה מים יחדיו, נבדוק מי הגיעו לגן ומי חסרים ולמה. ואיך מסדרים? כולם יחדיו! כך הכי  כיף! ומה עם ילד.ה שלא רוצה לסדר עם כולם? יכול.ה לשבת עם הבקבוק לראות כיצד החברימות מסדרים בזריזות וכיף את החצר. מדוע? זה לא חברי להמשיך לשחק כשכולם עובדים! לכן, כשנשמע את [שיר סידור החצר,](https://open.spotify.com/track/5bIEpKwEFgJzB7U3gFaeKm?autoplay=true) מיד נתחיל לסדר יחדיו - זה הרבה יותר מהיר וכיפי כך (:
+בהדרגה אנחנו בונות את הקבוצות שלנו: הקבוצה הכחולה מורכבת מוורודים לשעבר וצהובים לשעבר,  ואילו הצהובה מורכבת מסגולים לשעבר וילדימות חדשים. בשבועיים האחרונים התמקדנו בהכרת החללים והבנה - אני בכיתה הצהובה או הכחולה? עכשיו אנחנו גם מוסיפות את האווירה הקבוצתית. למשל, נשב יחדיו לחברותא: נשתה מים יחדיו, נבדוק מי הגיעו לגן ומי חסרים ולמה. ואיך מסדרים? כולם יחדיו! כך הכי  כיף! ומה עם ילד.ה שלא רוצה לסדר עם כולם? יכול.ה לשבת עם הבקבוק לראות כיצד החברימות מסדרים בזריזות וכיף את החצר. מדוע? זה לא חברי להמשיך לשחק כשכולם עובדים! לכן, כשנשמע את[ שיר סידור החצר](https://open.spotify.com/track/7DD7eSuYSC5xk2ArU62esN), מיד נתחיל לסדר יחדיו - זה הרבה יותר מהיר וכיפי כך (:
 
 **חג האופניים**
 
