--- a/content/team/נגה.md
+++ b/content/team/נגה.md
@@ -7,8 +7,4 @@ index: 18
 ---
 נגה בורודטי , בת 27, גרה בתל אביב
 
-. ......................................................................................................................................................
-
- עוסקת כשמונה שנים בעולם החינוך והילדים,למדתי במכללת לוינסקי לימודי גננות וניהול גנים. 
-
-התחלתי את דרכי בחינוך בנוער העובד והלומד מאז שאני קטנה גדלתי בקן בורוכוב בגבעתיים שם הייתי חניכה מדריכה ומלוות שכבה צעירה , עשיתי שנת שירות דרך התנועה שם ריכזתי קן בחיפה , גם בצבא הייתי בחייל חינוך והייתי מפקדת נוער וסמלת מחלקה בגדנ״ע, לאחר מכן עבדתי בכמה עבודות עד שהתחלתי לעבוד בגנים והבנתי כמה אני אוהבת את זה ושזה מה שאני רוצה לעשות בחיי הבוגרים ,אני מאוד אוהבת ילדים, מאוד מתחברת ריגשית קשובה ומכילה. אני אוהבת לראות את ההתפתחות שלהם במהלך השנים לראות איך הם התחילו קטנטנים ואיך היה מסיימים ממש אנשים קטנים עם כלים שאני ואנחנו מעניקים להם במהלך השנתיים, אוהבת גם את החיבור שנוצר עם ההורים , שמתיעצים איתי ויכולים לסמוך עלי שאני ארצה את הטוב ביותר לילדיהם.
+. .................................................................................................................................................. **עוסקת כשמונה שנים בעולם החינוך והילדים,למדתי במכללת לוינסקי לימודי גננות וניהול גנים. התחלתי את דרכי בחינוך בנוער העובד והלומד מאז שאני קטנה גדלתי בקן בורוכוב בגבעתיים שם הייתי חניכה מדריכה ומלוות שכבה צעירה , עשיתי שנת שירות דרך התנועה שם ריכזתי קן בחיפה , בצבא הייתי בחיל חינוך הייתי מפקדת נוער וסמלת מחלקה בגדנ״ע, לאחר מכן עבדתי בכמה עבודות עד שהתחלתי לעבוד בגנים והבנתי כמה אני אוהבת את זה ושזה מה שאני רוצה לעשות בחיי הבוגרים ,אני מאוד אוהבת ילדים, מאוד מתחברת ריגשית קשובה ומכילה. אני אוהבת לראות את ההתפתחות שלהם במהלך השנים לראות איך הם התחילו קטנטנים ואיך היה מסיימים ממש אנשים קטנים עם כלים שאני ואנחנו מעניקים להם במהלך השנתיים, אוהבת גם את החיבור שנוצר עם ההורים , שמתיעצים איתי ויכולים לסמוך עלי שאני ארצה את הטוב ביותר לילדיהם.**
