Update הצוות “ענבר”

--- a/content/team/ענבר.md
+++ b/content/team/ענבר.md
@@ -7,10 +7,4 @@ index: 17
 ---
 ענבר בנימין 28 גרה בתל אביב. בוגרת קורס הדרכת הורים בשיטת "במה מעצימה"
 
-.﻿.......................................................................................................................................................
-
-בתחום החינוך לגיל הרך מזה כ-7 שנים בעולם החינוך בעיקר עם גילאי 0-3.
-
-בעברי החיבור שלי עם ילדים היה מקרי ביותר, לא נמשכתי לעולם בכלל ומצאתי את עצמי ממש בטעות נכנסת לעבוד בגן. והתאהבתי היה קליק מיידי וממש הרגשתי שהגעתי למקום הנכון עבורי .
-החיבור עם הילדים, להקשיב להם ותת להם מקום בטוח ואוהב , היה נותן לי המון סיפוק לקום כל בוקר לעבודה עם חיוך וללכת לראות את כל החברים בגן וכל חבר הוא בצבע ועולם בפני עצמו.
-וכשהם סומכים עלי להיכנס לתוך העולם הפנימי העשיר שלהם ביחד מגיעים למקומות מופלאים
+.﻿....................................................................................................................................................**בתחום החינוך לגיל הרך מזה כ-7 שנים בעולם החינוך בעיקר עם גילאי 0-3. בעברי החיבור שלי עם ילדים היה מקרי ביותר, לא כיוונתי לעסוק בחינוך בתחילת הדרך מצאתי את עצמי  נכנסת לעבוד בגן והתאהבתי היה קליק מיידי וממש הרגשתי שהגעתי למקום הנכון עבורי . החיבור עם הילדים, להקשיב להם ותת להם מקום בטוח ואוהב , היה נותן לי המון סיפוק לקום כל בוקר לעבודה עם חיוך וללכת לראות את כל החברים בגן וכל חבר הוא בצבע ועולם בפני עצמו. וכשהם סומכים עלי להיכנס לתוך העולם הפנימי העשיר שלהם ביחד מגיעים למקומות מופלאים**
