Update הצוות “נעמי”

--- a/content/team/נעמי.md
+++ b/content/team/נעמי.md
@@ -7,6 +7,6 @@ index: 19
 ---
 עמי לנדר, בת 31 גרה בגבעתיים.
 
-7 שנים בתחום החינוך לגיל הרך- אשר התחלתי את דרכי בתחום החינ​וך לגיל הרך הרגשתי שמצאתי את מ​קומי בעולם. יש בלבי הרבה אהבה ​שאני רוצה להתחלק איתה עם ילדים​. 
+.﻿....................................................................................................................................................עוסקת שבע שנים בתחום החינוך לגיל הרך.   התחלתי את דרכי בתחום החינ​וך לגיל הרך הרגשתי שמצאתי את מקומי בעולם. יש בליבי הרבה אהבה ​שאני רוצה להתחלק איתה עם ילדים​. 
 
-אין דבר יותר מרגש בשבילי מלראו​ת צעדים ראשונים של ילדים, לשמו​ע מילים ראשונות. אני מרגישה אח​ריות להיות חלק מחייהם ומאמינה ​שבידיינו לגדל אותם מאושרים.
+אין דבר יותר מרגש בשבילי מלראות צעדים ראשונים של ילדים, לשמוע מילים ראשונות. אני מרגישה אחריות להיות חלק מחייהם ומאמינה ​שבידינו לגדל אותם מאושרים.
