--- a/content/weekly-update/על-מוכר-ועל-חדש.md
+++ b/content/weekly-update/על-מוכר-ועל-חדש.md
@@ -72,8 +72,6 @@ date: 2023-11-03T13:24:52.654Z
 
 **חיבוקים גדולים מכל צוות שכבת הצעירים: הילה, גבי, רוני, אלמוג, אורית, מיאל, נעמי, ענבר ושירז🌈☘️**
 
- 
-
 ## **השכבה הבוגרת**
 
 השבוע קרו לנו שני דברים מרגשים: קיבלנו מקלט חדש מרווח ונעים, וגם חברה חדשה - גפן!
@@ -84,7 +82,7 @@ date: 2023-11-03T13:24:52.654Z
 
 **גן במקלט**
 
-חלק מהילדימות חזרו עם חרדות חדשות: מאזעקות, מבומים ורעשים חזקים בכלל. הרבה מהם שאלו אותנו למה בעצם עברנו למקלט. החברימות הסבירו שהמקלט הוא מקום בטוח, והוספנו שאם אנחנו במקלט, אנחנו לא צריכים למהר להיכנס אליו רם תהיה אזעקה. תרגלנו יחד מה קורה במקרה של אזעקה, ובדקנו האם כל השכבה הבוגרת מצליחה לשבת על המחצלת - הרגשנו שזה קצת כמו "לבד על המרבד" - קצת צפוף! ואם נשמע אזעקה כשנהיה בגינה? מיד כולם ניגשים למחנכות ונרד יחד בצורה זהירה ממש עד המחצלת שלנו!
+חלק מהילדימות חזרו עם חרדות חדשות: מאזעקות, מבומים ורעשים חזקים בכלל. הרבה מהם שאלו אותנו למה בעצם עברנו למקלט. החברימות הסבירו שהמקלט הוא מקום בטוח, והוספנו שאם אנחנו במקלט, אנחנו לא צריכים למהר להיכנס אליו אם תהיה אזעקה. תרגלנו יחד מה קורה במקרה של אזעקה, ובדקנו האם כל השכבה הבוגרת מצליחה לשבת על המחצלת - הרגשנו שזה קצת כמו "לבד על המרבד" - קצת צפוף! ואם נשמע אזעקה כשנהיה בגינה? מיד כולם ניגשים למחנכות ונרד יחד בצורה זהירה ממש עד המחצלת שלנו!
 
 **דומה אך שונה**
 
