Update עדכון שבועי “השגרה-החדשה-שלנו”

--- a/content/weekly-update/השגרה-החדשה-שלנו.md
+++ b/content/weekly-update/השגרה-החדשה-שלנו.md
@@ -4,11 +4,13 @@ date: 2023-11-10T10:56:39.943Z
 ---
 **שבת שלום לכל משפחות הגן,**
 
-אנחנו כבר שבוע שני בפתרונות הזמניים שלנו – הבוגרים והאדומים במקלטים, והסגולים בבית של אחינועם, ואנחנו – הילדימות והצוות כבר התחלנו להתרגל ולהרגיש בנוח. המון תודה על כל התמיכה, העזרה והנכונות בשבועות האלה, בשם כל הצוות שמרגיש את זה.
+אנחנו כבר שבוע שני בפתרונות הזמניים שלנו – הבוגרים והאדומים במקלטים, והסגולים בבית של אחינועם, ואנחנו – הילדימות והצוות כבר התחלנו להתרגל ולהרגיש בנוח. המון תודה על כל התמיכה, העזרה והנכונות בשבועות האלה, בשם כל הצוות שמרגיש את זה. מייל על התכנון שלנו להמשך יישלח לכם עד אמצע השבוע הבא.
+
+יש לנו בקשה חשובה מכם בינתיים: אנחנו יודעים שהרבה מכם ממהרים כשאתם מביאים או אוספים את הילדימות, ובכל זאת, מיצאו רגע חניה והשתדלו לא לחסום את הרחוב - השכנים החדשים שלנו מאוד מפרגנים לנו, אבל גם הם צריכים לצאת ולהיכנס מהרחובות הקטנים בשעות האלה ואנחנו רוצים לשמור איתם על יחסי שכנות טובים!
+
+**שבת שלום ומנוחה!**
 
 **אחינועם, עומרי (מרחוק) וכל צוות גן ילדי הטבע הדמוקרטי**
-
- 
 
 ## **השכבה הצעירה**
 
@@ -75,8 +77,6 @@ date: 2023-11-10T10:56:39.943Z
 חשוב מאוד לכתוב שמות על כל הציוד☺
 
 מאחלות סוף שבוע רגוע ושקט מכל צוות שכבת הצעירים- הילה, ענבר, אלמוג, רוני, גבי, נעמי, מיאל, שירז ואורית.✨
-
-
 
 ## **השכבה הבוגרת**
 
