--- a/content/weekly-update/סיבובים-וספירלות.md
+++ b/content/weekly-update/סיבובים-וספירלות.md
@@ -14,7 +14,9 @@ date: 2023-12-22T10:44:44.873Z
 
 **בוגרים**: 8:30-11:45
 
-2. # אתגר הטחינה! (והשקדים!)
+2. אזעקות בגן: שימו לב שבמקרה של אזעקה המוקד של המחנכות הוא קודם דאגה לילדימות וכמובן לסדר הטוב במקלטים. ברגע שאנחנו מתפנות לכך אנחנו גם מעדכנות אתכם, לעתים ייקח כמה דקות.
+
+# אתגר הטחינה! (והשקדים!)
 
 בעקבות חג החנוכה נעמיק בשבוע הקרוב בשמנים שונים ומשונים. הטחינה של הגן מככבת בכל ארוחה והילדימות מאוד אוהבים אותה!  מדי שנה אנחנו פותחים גם לכם הזדמנות לחלוק את המתכונים המשפחתיים שלכם, ולהכין עבור ילדות.י הגן את הטחינה הביתית שלכם.
 
@@ -42,7 +44,7 @@ date: 2023-12-22T10:44:44.873Z
 
 מחכות לטחינות הטעימות שלכם!
 
-3. # נשיכות בגן:
+## נשיכות בגן:
 
  אנחנו רוצות לעדכן אתכן בתופעה שמתרחשת בתקופה זו בגננו. 
 
@@ -75,8 +77,6 @@ date: 2023-12-22T10:44:44.873Z
 **בינתיים, שבת מנוחה,**
 
 **עומרי, אחינועם וכל צוות גן ילדי הטבע הדמוקרטי**
-
-
 
 ## השכבה הצעירה
 
@@ -122,8 +122,6 @@ date: 2023-12-22T10:44:44.873Z
 נתראה ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!
 
 **צוות השכבה הצעירה: הילה, אורית, ענבר, אלמוג, רוני, גבי, נעמי, לילה ומיאל**
-
-
 
 ## השכבה הבוגרת
 
