--- a/content/weekly-update/מתנות-מן-הטבע.md
+++ b/content/weekly-update/מתנות-מן-הטבע.md
@@ -13,20 +13,16 @@ date: 2023-12-28T19:48:34.036Z
 3. **דיווחי סוף יום**: גם לנו חשוב לדבר אתכם דקותיים בסוף היום, לספר איך עבר עלינו היום ואם היה משהו מיוחד שקרה. אבל, בעשר דקות האחרונות, כאשר מגיעים בבת אחת הרבה הורימות ואנחנו לקראת סגירה, אנחנו לא באמת יכולות להקדיש את תשומת הלב הראויה לכך. מי שמעוניינים בדיווחים קצת יותר עמוקים, אנא הגיעו קצת קודם, ותקבלו דיווח מלא ומפורט :)
 4. **מחלות חורף**: החורף הגיע, ועימו גם גל מחלות חורף… מרעננות לכם כמה מנהלי הבריאות העיקריים שלנו:
 
-* חום: ילד עם חום לא יכול להגיע לגן, ועליו לנוח בבית 24 שעות מירידת החום.
-* שלשולים/הקאות: ילד שהקיא או שילשל 2-3 פעמים צריך גם לנוח בבית 24 שעות מהתופעה האחרונה.
+* חום: ילדימות עם חום לא יכולים להגיע לגן, ועליהם לנוח בבית 24 שעות מירידת החום.
+* שלשולים/הקאות: ילדימות שהקיאו או שילשלו 2-3 פעמים צריכים גם לנוח בבית 24 שעות מהתופעה האחרונה.
 * פצעים לא ברורים: ישנן שלל מחלות ילדימות מדבקות מאוד שהסימפטום הבולט שלהן הוא פצעים על הפנים והגוף. במקרה שרואים דבר כזה, יש ללכת להיבדק באופן מיידי, ולא ניתן לחזור לגן ללא אישור רופא.
 * דלקות עיניים: הפרשות מוגלתיות מהעיניים עשויות להעיד על דלקת עיניים מדבקת - גם במקרה שכזה אי אפשר להגיע לגן ללא אישור רופא.
 
-שימו לב: אנחנו לא שולחות ילדימות הביתה באמצע היום סתם. אם קראנו לכם, זה אחרי שראינו שהילדימות לא מרגישים טוב, נמדד להם חום של 38.5 מעלות ומעלה (שנמדד על ידי קפטנית, 3 פעמים בהפרשים של 10-15 דקות, בשתי האזניים), או סימפטומי חולי אחרים. אנחנו יודעות שעבורכם זה יום עבודה שרוף ולא קוראות לכם בקלות דעת. לעתים נעדכן גם עם ילד.תכם מרגישים לנו שפוכים, או עם חום נמוך, כדי לתת לכם את כל המידע לקבל החלטות בעצמכם.
-
-
+שימו לב: אנחנו לא שולחות ילדימות הביתה באמצע היום סתם. אם קראנו לכם, זה אחרי שראינו שהילדימות לא מרגישים טוב, נמדד להם חום של 38.5 מעלות ומעלה (שנמדד על ידי קפטנית, 3 פעמים בהפרשים של 10-15 דקות, בשתי האזניים), או סימפטומי חולי אחרים. אנחנו יודעות שעבורכם זה יום עבודה שרוף ולא קוראות לכם בקלות דעת. ילדימות שיצאו בצורה כזו לא יכולים לחזור למחרת לגן. לעתים נעדכן גם עם ילד.תכם מרגישים לנו שפוכים, או עם חום נמוך, כדי לתת לכם את כל המידע לקבל החלטות בעצמכם - במקרים כאלה גם ההחלטה האם להביא את הילד.ה למחרת לגן לשיקולכם. 
 
 **שתהיה שבת מנוחה ובריאות,**
 
 **עומרי, אחינועם, וכל צוות גן ילדי הדמוקרטי**
-
-
 
 ## השכבה הצעירה
 
@@ -61,8 +57,6 @@ date: 2023-12-28T19:48:34.036Z
 ניפגש ביום ראשון כרגיל - לא לשכוח סדינים נקיים ובקבוקים מלאים.
 
 **שנה אזרחית טובה - צוות השכבה הצעירה: ענבר, נעמי, אלמוג, אורית, גבי, שירז, רוני והילה**
-
-
 
 ## השכבה הבוגרת
 
