Update עדכון שבועי “מתנות-אל-הטבע”

--- a/content/weekly-update/מתנות-אל-הטבע.md
+++ b/content/weekly-update/מתנות-אל-הטבע.md
@@ -2,8 +2,6 @@
 title: מתנות אל הטבע
 date: 2024-01-05T11:16:54.637Z
 ---
-
-
 **שלום לכל משפחות הגן,**
 
 כמה עדכונים והודעות לפני העדכון:
@@ -17,8 +15,6 @@ date: 2024-01-05T11:16:54.637Z
 **בינתיים, שבת שלום ומנוחה,**
 
 **אחינועם, עומרי וכל צוות גן ילדי הטבע הדמוקרטי**
-
- 
 
 ## **השכבה הצעירה**
 
@@ -40,6 +36,8 @@ date: 2024-01-05T11:16:54.637Z
 
 הכנו מחסה לחתולים שיהיה להם מקום נעים כשקר ורטוב. לקחנו ארגז קרטון, עטפנו אותו בניילונים כדי לשמור אותו יבש, הכנסנו לתוכו בדים נעימים וקישטנו אותו יפה יפה לחתולים המתוקים! הוצאנו את הארגזים שלנו לגינה, וממש מהר החתולים גילו אותם ונכנסו לנוח ולהתחמם בפנים! איך התרגשנו!
 
+![](/assets/pics/uploads/cat-shelter-2.jpg)
+
  **מה עוד עשינו בגינה? אור וצל!**
 
 חיפשנו את אלומת השמש, היכן היא פוגעת ואת היא מאירה. מה קורה כשאנחנו מסתירים לאלומת השמש את הדרך? אנחנו יוצרים צל! ניסינו לצייר את הצל שיצרנו בעזרת גירים צבעוניים וגם את טביעות הידיים והרגליים שלנו:)
@@ -54,8 +52,6 @@ date: 2024-01-05T11:16:54.637Z
 
 **צוות השכבה הצעירה: הילה, נעמי, גבי, ענבר, אלמוג, אורית ורוני**
 
- 
-
 ## **השכבה הבוגרת**
 
 בשבועיים האחרונים התמקדנו בכל האוצרות והמתנות שאנחנו מקבלים מהטבע בגינה שלנו: הפירות הטעימים מהעצים, הפרחים היפים ופירות סרק למיניהם שעושים לנו יפה בעיניים, הצל שנותן לנו מחסה מהשמש, וצמרות העצים שנותנות לנו מחסה מהגשם 🙂
@@ -69,6 +65,8 @@ date: 2024-01-05T11:16:54.637Z
 ציפורים, חתולים… את ציפורי הגינה אנחנו כבר מזהים ממש יפה, והשבוע למקבץ שאנחנו כבר מכירים - יונים, דרורים, דוכיפת, נחליאלי ועורבני - הצטרפו גם שני חברימות חדשים: המיינה והדררה. למיינה יש ראש שחור ומקור כתום, ואילו הדררה ירוקה כולה! מה משותף להן? שתיהן ציפורים, ושתיהן אוהבות לעשות הרבה רעש 🙂 שמנו לב שבגינה הציבו תיבת קינון שיהיה לציפורי השיר הקטנות מקום יבש לקנן בו - מדי יום אנחנו מציצים אליה ומנסים להבין האם מתוך החור מציצה איזו ציפור קטנה… בינתיים לא ראינו, וחשבנו שאולי בגינה שלנו, צמרות העצים מספקות לציפורי הסביבה את כל מה שהן זקוקות לו.
 
 את חתולי הגינה אנחנו כבר מכירים היטב. מדי בוקר אנחנו רואים את השכן שמפזר להם אוכל ודואג למלא את כלי השתייה שלהם. אבל השבוע ירד גשם. איפה החתולים יכולים להסתתר? החלטנו לבנות להם מחסה שיהיה עמיד לגשם, חמים ונעים. לקחנו ארגזים, קישטנו אותם, והוספנו להם שמיכות נעימות מבפנים. אבל רגע - מה יקרה לארגז הקרטון כשהוא יירטב? חשבנו על חומרים שעוצרים את הגשם: העלים של העץ תופסים את הטיפות לפני שהן נופלות לנו על הראש, כמו שהרגשנו בעצמנו וגם קראנו בספר "על עלה ועל אלונה". המטריה שלנו לא נותנת לגשם לעבור. הגג של המקלט - לפעמים לא נותן לגשם לעבור. חשבנו אילו עוד חומרים יכולים להגן על מחסה החתולים שלנו מפני הגשם, ולבסוף עטפנו אותם במסקינגטייפ שקוף כדי שעדיין אפשר יהיה לראות את הקישוטים שלנו. הנחנו את הארגזים בגינה, ומהר מאוד ראינו שהם אוישו!
+
+![](/assets/pics/uploads/cat-shelter.jpg)
 
 **גשם, שמש ורוח**
 
