Update עדכון שבועי “מחממים-את-הגוף”

--- a/content/weekly-update/מחממים-את-הגוף.md
+++ b/content/weekly-update/מחממים-את-הגוף.md
@@ -9,7 +9,7 @@ date: 2024-01-12T14:16:29.199Z
 נתחיל מכמה הודעות לפני העדכון:
 
 1. **פורום הורים**: הפורום בנושא יחסים בין אחים נדחה בשבוע ויתקיים ביום שני הקרוב, בשעה 20:00 בזום. מקוים לראותכם שם.
-2. **חזרה לגן**: לקראת המעבר על הגן, עומרי יקיים בסוף הפורום גם מפגש הסבר מפורט יותר בו גם כמובן תוכלו גם לשאול שאלות אם יש לכם - מי שמגיעים לפורום מוזמנים להישאר, והיתר מוזמנים להצטרף - זה סביב 20:45. מעדכנות שבשבוע הבא נתחיל כבר לדבר עם הילדימות על החזרה לגן כדי להכין גם אותם.
+2. **חזרה לגן**: לקראת המעבר על הגן, עומרי יקיים בסוף הפורום גם מפגש הסבר מפורט יותר בו גם כמובן תוכלו גם לשאול שאלות אם יש לכם - מי שמגיעים לפורום מוזמנים להישאר, והיתר מוזמנים להצטרף - זה סביב 20:45. מעדכנות שבשבוע הבא נתחיל כבר לדבר עם הילדימות על החזרה לגן כדי להכין גם אותם. מצרפות כאן גם [טבלת הרשמה](https://docs.google.com/spreadsheets/d/1FQ8aRCvjA7uHMVtrHU9x_Q7e5HnshjtkVuQNilY4GKw/edit#gid=0) לסיוע בשינוע כל הציוד שלנו בחזרה לגן - עם הזמן הצטברו אצלנו עוד ועוד דברים, כך שנזדקק לעזרה בכך. ביום חמישי ב-16:00 נאסוף את הציוד מהמקלטים ונעביר לגן.
 3. **הכינה נחמה**: אנחנו רואות בגן לא מעט ילדימות מתגרדים בראש - אנא הקפידו בתקופה זו על סירוקי כינים סדירים ואם צריך גם טיפול…
 4. **זבובים ויתושים**: תלינו השבוע ברחבי הגינה ובמקלטים מלכודות זבובים ויתושים, מקוות שכולנו ניעקץ קצת פחות…
 
@@ -17,11 +17,7 @@ date: 2024-01-12T14:16:29.199Z
 
 **עומרי, אחינועם וכל גן ילדי הטבע הדמוקרטי**
 
- 
-
 ## השכבה הצעירה
-
- 
 
 הימים הפכו קרים, הבגדים מסורבלים והכל רטוב ומטפטף.
 
@@ -61,8 +57,6 @@ date: 2024-01-12T14:16:29.199Z
 
 **צוות השכבה הצעירה - הילה, נעמי, שירז, גבי, ענבר, אלמוג, רוני ואורית**
 
- 
-
 ## השכבה הבוגרת
 
 אחד הדברים הכי כיפיים בגינת שולמן הוא עולם החי העשיר שגילינו כאן. מעבר לציפורים הרבה יותר מגוונות ממה שאנחנו רואות בגן, יש כאן קהילת חתולים עצומה, שבלולים ושאר זוחלים, הרבה חרקים (אולי קצת יותר ממה שהיינו רוצים, ראו ערך מלכודות זבובים ויתושים), וכפי שגילינו בשבועות האחרונים - גם הרבה קיפודים!
@@ -70,8 +64,6 @@ date: 2024-01-12T14:16:29.199Z
 **הקיפוד 2.0 🦔**
 
 בזמן שטיילנו בגינה השבוע, לפתע גילינו בין השיחים כדור קוצני במיוחד? מה זה הכדור הזה? זה בכלל לא כדור! זה קיפוד! הקיפוד כנראה נבהל מאיתנו כי מיד הפך לכדור קוצים, ממש כמו שמוליקיפוד! התבוננו בו וראינו איך כשהוא נושם, הקוצים שלו מתרחבים - ממש כפי שהבטן שלנו מתרחבת כשאנחנו נושמים עמוק. אבל… היינו קצת מודאגים כי אנחנו לא רגילים לראות קיפודים מסתובבים ביום - הם מעדיפים לרוב להסתובב בלילה. חשבנו שאולי הוא לא מרגיש טוב, וניסינו להבין איך אפשר לעזור לו: אולי נקח אותו לרופא? אולי נזמין את האמבולנס שלקח את החבר הקיפוד הקודם? שמנו אותו בארגז, נתנו לו נישנושים ומים וכיסנו אותו בשמיכה. התבוננו בו ונתנו לו לנוח, ושמחנו לראות שהוא קצת התאושש!
-
- 
 
 בדקנו גם מה קרה עם בתי החתולים שהנחנו בגינה בשבוע שעבר, ושמחנו לגלות שבבקרים ובימים הגשומים החתולים אכן מסתתרים בהם ומתכרבלים בתוכם! לצערנו בסופה שעוד שוצפת בחוץ עכשיו, הרוח העיפה מים גם לתוך הארגזים שהחלו להירטב - אבל אפילו כשבפנים כבר היה לח, החתולים עוד נהנו מהמסתור היחסי…
 
