Update עדכון שבועי “להתראות-והרבה-תודה-לגינת-שולמן”

--- a/content/weekly-update/להתראות-והרבה-תודה-לגינת-שולמן.md
+++ b/content/weekly-update/להתראות-והרבה-תודה-לגינת-שולמן.md
@@ -11,13 +11,11 @@ date: 2024-01-19T10:45:28.229Z
 1. **ביום ראשון**: שעות הגן יהיו 8:00-16:00 לכלל הגן, על מנת לתת לילדימות ולצוות רגע זמן התאקלמות. בהמשך השבוע נחזור כבר לשעות הרגילות: הגעה ב-7:45 (עד 8:30 בצעירים, עד 9:00 בבוגרים) וסיום ב-16:30, אבל שימו לב שחלק מהילדימות עשויים להזדקק למעט יותר זמן התאקלמות ויתכן ונבקש מחלקכם להגיע מעט יותר מוקדם לאיסוף בימים הראשונים.
 2. **יום המשפחה**: זהו אחד החגים האהובים עלינו בגן, ומדי שנה אנחנו בוחרות להקדיש אותו דווקא למשפחה המורחבת. השכבה הבוגרת מכינה מדי שנה מסיבה אליה נזמין סבא וסבתא (או הרכב אחר של שניים, כמובן, כל משפחה וההרכב שלה). המסיבה תתקיים ב-16.2, ונשלח אתכם בימים הקרובים הזמנה רשמית, אבל הכינו את סבא או סבתא, הדוד או הדודה לתאריך. זהו יום פעילות כמעט רגיל בגן: נבקש ביום זה לאסוף את השכבה הצעירה מעט מוקדם יותר - עד 11:30. הבוגרימות יישארו להכין את הגן וב-12:00 יקבלו את פני סבא וסבתא ויובילו אותם בתחנות פעילות שונות ברחבי הגן.
 
-
+   אל תדאגו, גם לסבים ולסבתות של השכבה הצעירה מחכה הפתעה, ובשבוע הקרוב נשלח לכם בוואטסאפ טופס למילוי כתובות כדי שנוכל לשלוח להם הפתעה משלהם :)
 
 **שבת סגרירית נעימה,**
 
 **עומרי, אחינועם וכל גן ילדי הטבע הדמוקרטי**
-
-
 
 השכבה הצעירה
 
