Update הצוות “נופר”

--- a/content/team/נופר.md
+++ b/content/team/נופר.md
@@ -1,8 +1,8 @@
 ---
-title: "נופר "
-firstname: "נופר "
+title: רון
+firstname: פינטו
 lastname: "תנא בן-דוד "
-img: /assets/pics/uploads/faceapp_1634404016873.jpg
+img: /assets/pics/uploads/תמונה-רון-1.jpeg
 index: 11
 ---
 **נופר תנא בן-דוד, בת 40 - מחנכת**
