Update הצוות “נופר”

--- a/content/team/נופר.md
+++ b/content/team/נופר.md
@@ -1,7 +1,7 @@
 ---
 title: רון
-firstname: פינטו
-lastname: "תנא בן-דוד "
+firstname: רון
+lastname: פינטו
 img: /assets/pics/uploads/תמונה-רון-1.jpeg
 index: 11
 ---
