Update הצוות “נופר”

--- a/content/team/נופר.md
+++ b/content/team/נופר.md
@@ -5,10 +5,8 @@ lastname: פינטו
 img: /assets/pics/uploads/תמונה-רון-1.jpeg
 index: 11
 ---
-**נופר תנא בן-דוד, בת 40 - מחנכת**
-
-**בעלת תואר ראשון בעבודה סוציאלית בהצטיינות יתרה ופסיכותרפיסטית בטיפול במשחקים - חמש שנות נסיון בחינוך לגיל הרך**
+**רון פינטו, מחנכת. ל﻿ומדת חינוך באומנות**
 
 - - -
 
-לתחום החינוך לגיל הרך הגעתי מתוך חוויה אישית. שהיתי וחינכתי את בני בביתי עד גיל שנה וחצי ובאותה תקופה מצאתי את עצמי מקימה קבוצת אמהות לילדים בגילאים הרכים ומתחברת לילדימות נוספים בגילאים הרכים. תמיד הרגשתי שיש לי חיבור לילדים ונוער בגילאים שונים. תחילה ניסיתי להשפיע מהמקום הטיפולי והרגשי מתוך מסגרות חינוכיות שונות. בשנים האחרונות הבנתי אף יותר מתוך המגע שלי עם השדה החינוכי עד כמה השילוב בין חינוך וטיפול רגשי הוא משמעותי. אני מאמינה שחלק מתפקידנו כמחנכול לגיל הרך הוא לפתח את החוסן האישי של הילדים והילדות כבר מהגילאים הרכים כדי לבנות יחד איתם את הבסיס שיאפשר להם ולהן לצמוח ולפרוח.
+ עבדתי כמשלבת לילדים בעלי צרכים מיוחדים מגילאי גן ועד יסודי, מדריכה ומטפלת בגן חיות שמציב במרכזו את ערכי הקיימות ולמידה תוך התבוננות מתוך הבנת הצורך בשמירה על מגוון ביולוגי. בתחום החינוך בחרתי לאחר שהגעתי לתיכון לנוער בסיכון, שם הבנתי לראשונה את הצורך של כל ילד במבוגר שיאיר לו פנים ויקשיב לצרכיו. לאחר מכן התחלתי לימודי תואר ראשון בהוראת אומנות ובסיום שנה מוצלחת הבנתי שאת דרכי אני יעשה  בחינוך במהלך השנה רכשתי הכשרה חינוכית שתרמה רבות להתפתחותי, וידע רחב שאני שמחה ליישם בחיי היום יום שלי. אני מאמינה בחינוך מתוך שמחה ואהבה, למען עתיד טוב יותר על הכדור. אני מאמינה שחלק מתפקידנו כמחנכול לגיל הרך הוא לפתח את החוסן האישי של הילדים והילדות כבר מהגילאים הרכים כדי לבנות יחד איתם את הבסיס שיאפשר להם ולהן לצמוח ולפרוח.
