--- a/content/team/יהודית.md
+++ b/content/team/יהודית.md
@@ -5,4 +5,28 @@ lastname: "ברויזקין "
 img: /assets/pics/uploads/תמונה-יהודית-1.jpg
 index: 20
 ---
-כ
+יהודית בריוזקין, בת 24, מחנכת, 
+
+חזרה מטיול של שנה בעולם ,לומדת הדרכת טיולים ואמנית מילה.
+
+ההדרכה תמיד היתה טמועה בי, העיסוק בתוכן ,היציקה שלו אל תוך פעילות אקטיבית, והקשיבות לקהל שלי מסקרנת אותי במיוחד.
+
+מגיל צעיר התנדבתי עם נוער בסיכון וחינוך מיוחד, בהמשך הדרך גם הדרכתי טיולים בקירגיזסטן והדרכתי חוגים בצהרונים של גני ילדים.
+
+רותקתי ממה וכמה שיש לי ללמוד בכל התנסות שהייתה לי בתחום החינוך.
+
+וכמה המפתח הוא תמיד הקשבה אהבה וגבולות.
+
+בשביל להבין כל אדם יש קודם כל להבין את הילד שבו. (כי כולנו פעוטות גדולים)
+
+מה הם הצרכים הבסיסיים שלו , מה מעניק לו את תחושת הביטחון כדי שיוכל למנף את עצמו מעלה.
+
+מתוך הסקרנות והאהבה לבני אדם אני ניגשת לחינוך בגן הדמוקרטי.
+
+מתוך האהבה קל יותר להקשיב, לרצות להבין ולפתח את הילדימיות.
+
+
+
+אני נרגשת לחוות כל ילד וילדה עם עולמם הפנימי שמתפתח ומתרחב אט אט עד שהוא מגיע אלי ואלינו, השאיפה שלי היא להעניק את הגבולות הקשיבות והאהבה שיאפשרו לילדימיות את החופש להיות עצמם ולגדול להיות מאושרים.
+
+שורה תחתונה- אני אוהבת את הילדימיות שלכם.
