Update הצוות “יהודית”

--- a/content/team/יהודית.md
+++ b/content/team/יהודית.md
@@ -5,28 +5,14 @@ lastname: "ברויזקין "
 img: /assets/pics/uploads/תמונה-יהודית-1.jpg
 index: 20
 ---
-יהודית בריוזקין, בת 24, מחנכת, 
+**יהודית בריוזקין, בת 24, מחנכת.** 
 
-חזרה מטיול של שנה בעולם ,לומדת הדרכת טיולים ואמנית מילה.
+חזרה מטיול של שנה בעולם ,לומדת הדרכת טיולים ואמנית.
 
-ההדרכה תמיד היתה טמועה בי, העיסוק בתוכן ,היציקה שלו אל תוך פעילות אקטיבית, והקשיבות לקהל שלי מסקרנת אותי במיוחד.
+.﻿.......................................................................................................................................................
 
-מגיל צעיר התנדבתי עם נוער בסיכון וחינוך מיוחד, בהמשך הדרך גם הדרכתי טיולים בקירגיזסטן והדרכתי חוגים בצהרונים של גני ילדים.
+ התנדבתי עם נוער בסיכון וחינוך מיוחד, בהמשך הדרך גם הדרכתי טיולים בקירגיזסטן ועבדתי בגני ילדים. מהיכולת ללמוד בכל התנסות שהייתה לי בתחום החינוך ועד כמה זה הדרך הוא תמיד הקשבה אהבה ויצירת מרחב ברור לילדים .בשביל להבין כל אדם יש קודם כל להבין את הילד שבו. (כי כולנו פעוטות גדולים) מה הם הצרכים הבסיסיים שלו , מה מעניק לו את תחושת הביטחון כדי שיוכל למנף את עצמו מעלה.
 
-רותקתי ממה וכמה שיש לי ללמוד בכל התנסות שהייתה לי בתחום החינוך.
-
-וכמה המפתח הוא תמיד הקשבה אהבה וגבולות.
-
-בשביל להבין כל אדם יש קודם כל להבין את הילד שבו. (כי כולנו פעוטות גדולים)
-
-מה הם הצרכים הבסיסיים שלו , מה מעניק לו את תחושת הביטחון כדי שיוכל למנף את עצמו מעלה.
-
-מתוך הסקרנות והאהבה לבני אדם אני ניגשת לחינוך בגן הדמוקרטי.
-
-מתוך האהבה קל יותר להקשיב, לרצות להבין ולפתח את הילדימיות.
-
-
+מתוך הסקרנות והאהבה לבני אדם אני ניגשת לחינוך בגן הדמוקרטי. מתוך האהבה קל יותר להקשיב, לרצות להבין ולפתח את הילדימיות.
 
 אני נרגשת לחוות כל ילד וילדה עם עולמם הפנימי שמתפתח ומתרחב אט אט עד שהוא מגיע אלי ואלינו, השאיפה שלי היא להעניק את הגבולות הקשיבות והאהבה שיאפשרו לילדימיות את החופש להיות עצמם ולגדול להיות מאושרים.
-
-שורה תחתונה- אני אוהבת את הילדימיות שלכם.
